src/objects/Technical_Logs__c.object
<CustomObject>
    <description>Technical Logs</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <externalId>true</externalId>
        <label>Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <description>start date</description>
        <label>start date</label>
        <type>DateTime</type>
    </fields>
    <label>Technical Logs</label>
    <listViews>
        <fullName>AMS</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>AMS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_1_record</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>Operation__c</columns>
        <columns>Record__c</columns>
        <columns>Status__c</columns>
        <columns>start_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record__c</field>
            <operation>contains</operation>
            <value>15335246</value>
        </filters>
        <label>AMS - 1 record</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_Error</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>Operation__c</columns>
        <columns>Record__c</columns>
        <columns>Status__c</columns>
        <columns>start_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operation__c</field>
            <operation>equals</operation>
            <value>AMS 2 MDM - AgencyDetails</value>
        </filters>
        <filters>
            <field>Record__c</field>
            <operation>contains</operation>
            <value>27340574</value>
        </filters>
        <label>AMS - Error</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_Error_Sent</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Operation__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Log__c</columns>
        <columns>start_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>AMS Error Sent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_Errors</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>AMS Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_Invalid</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>Operation__c</columns>
        <columns>Record__c</columns>
        <columns>Status__c</columns>
        <columns>start_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invalid</value>
        </filters>
        <label>AMS Invalid</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_OK</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>Operation__c</columns>
        <columns>Record__c</columns>
        <columns>Status__c</columns>
        <columns>start_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>error</value>
        </filters>
        <filters>
            <field>Record__c</field>
            <operation>contains</operation>
            <value>96544766</value>
        </filters>
        <label>AMS - OK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_Sales_Order</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>Operation__c</columns>
        <columns>Record__c</columns>
        <columns>Status__c</columns>
        <columns>start_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operation__c</field>
            <operation>contains</operation>
            <value>AMS 2 MDM - Sales Order</value>
        </filters>
        <filters>
            <field>start_date__c</field>
            <operation>equals</operation>
            <value>5/9/2021 12:00 AM</value>
        </filters>
        <label>AMS - Sales Order</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DEFAULT_DATE_SCRIPT</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>Operation__c</columns>
        <columns>Record__c</columns>
        <columns>Status__c</columns>
        <columns>start_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operation__c</field>
            <operation>contains</operation>
            <value>DEFAULT DATE SCRIPT</value>
        </filters>
        <label>DEFAULT DATE SCRIPT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Technical Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>